linotp (3.4.4~rc1-1) UNRELEASED; urgency=medium

  Fix:
  * Added a check to update CA certificates only if `.crt` files exist in `/usr/local/share/ca-certificates`.
  * Reverse the commit that prevented setting the otppin for mOTP tokens
    and used it as token pin instead (was broken since 3.4.1)
  * User information was not included in ValidateController responses when
    * the `detail_on_success` policy was active
    * the user had no tokens assigned
    * authentication was successful through a passing policy (e.g., `passthru` or `passOnNoToken`)
    Previously, in this scenario the user object in the response was empty, which could
    impact integrations that rely on the detail_on_success policy, such as LinOTP IdP.
    Now, the user information is correctly included in the response.
  * Apply policy `setrealm` in ValidateController when the user is known

 -- LinOTP Packaging <packaging@linotp.de>  Wed, 09 Apr 2025 11:00:00 +0100
 
linotp (3.4.3-1) buster; urgency=medium

  Fix:
  * timestamp rounding error in challenge signature verifcation when running LinOTP against MySQL 8 database

 -- LinOTP Packaging <packaging@linotp.de>  Wed, 05 Mar 2025 17:40:00 +0100

linotp (3.4.2-1) buster; urgency=low

  Fix:
  * include json-translations in debian package and container

 -- LinOTP Packaging <packaging@linotp.de>  Wed, 05 Mar 2025 08:00:00 +0200

linotp (3.4.1-1) buster; urgency=low

  Fixes:
  * actually set Token PIN in `userservice/enroll`

 -- LinOTP Packaging <packaging@linotp.de>  Wed, 27 Nov 2024 08:59:30 +0100


linotp (3.4.0-1) buster; urgency=low
  
  Breaking Changes:
  * For the container, the `client=` HTTP POST parameter is deprecated and disabled by default.
    It will be removed in an upcoming version of LinOTP. It can be re-enabled
    if the `GET_CLIENT_ADDRESS_FROM_POST_DATA` config is set to a true value
    (the default is "false", for security reasons). Only if re-enabled, the